# hermes

./: .gitignore  .gitmodules  README.md  bun.lockb  package.json  temp.dot  temp.json  tsconfig.json
backend/: always.v  package.json  temp.json  temp.v  tsconfig.json
backend/src/: components.ts  index.ts  logger.ts  types.ts  yosys.ts
backend/src/components/: component.ts  constant.ts  utils.ts  wire.ts
backend/src/components/add/: add.ts  add_8bit_cca.schem
backend/src/components/sdff/: sdff.ts  sdff_fast.schem  sdff_safe.schem
backend/src/layout/: annealing2d.ts  generic.ts
backend/src/schematic/: resets.ts  schematic.ts  sponge.ts  states.ts
backend/src/server/: router.ts  server.ts  trpc.ts
backend/src/yosys/: schemas.ts  types.ts
backend_new/: Cargo.toml  temp.json
backend_new/src/: main.rs
backend_new/src/yosys/: cli.rs  types.rs
frontend/: package.json
frontend/src/: App.tsx  Index.tsx  main.tsx
frontend/src/utils/: trpc.ts
src/: constants.ts  index.ts  logger.ts  types.ts
src/components/: wire.ts
src/components/add/: add.ts
src/components/sdff/: sdff.ts
src/schematic/: resets.ts  schematic.ts  sponge.ts  states.ts
