[package]
name = "backend_new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.202", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.117"
serde_path_to_error = "0.1.16"
